[metadata]
name = tlab_analysis
version = attr: tlab_analysis.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/Waseda-TakeuchiLab/tlab-analysis
description = Helpful for data analysis in Takeuchi Lab
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    pandas>=1.4.3
    scipy>=1.8.1

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119

